Fixing issue with app content appearing behind header #36

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -100,6 +100,9 @@ header.app-header {
   }
 }
 
+.app-content {
+  margin-top: 70px;
+}
 
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
